# huangji-jingshi

./: .gitignore  API_FIX.md  BACKEND_FIX_GUIDE.md  BAZI_IMPLEMENTATION_SUMMARY.md  BAZI_USER_GUIDE.md  CHINA_ACCESS_SOLUTION.md  CONNECT_FRONTEND.md  CREATE-NEW-RENDER-SERVICE.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  DEPLOY_CLOUDFLARE.md  FINAL-DEPLOYMENT-REPORT.md  FINAL_FIX.md  FIXES_SUMMARY.md  FIX_RENDER.md  FIX_VERCEL_PROTECTION.md  IMPLEMENTATION_REPORT.md  MANUAL-RENDER-DEPLOY.md  SMART_ROUTING.md  SUCCESS.md  TROUBLESHOOT.md  URGENT-BACKEND-FIX.md  URGENT_FIX.md  api-debug-test.md  deep_inspect.py  direct-api-test.js  force-update.sh  frontend-backend-connection.md  huangji-jingshi-website-test-report.md  huangji_year_mapping_1744_2103.json  inspect_excel.py  package-source.sh  parse_huangji.py  render.yaml  test-all-apis.js  test-api-fix.js  test-api.js  test-backend.js  vercel-deployment-fix.md  workspace.json  (+3 more)
.memory/: todo_meta.json
.vercel/: project.json
backend-fixed/: Cargo.toml  render.yaml
docs/: api-documentation.md  api-test-script.md  deployment-status-report.md  frontend-integration-guide.md  frontend-migration-guide.md  project-status-report.md  testing-guide.md  快速诊断指南.md  网站测试报告.md  部署修复报告.md  (+1 more)
huangji-jingshi-web/backend/: Cargo.toml  package.json  render.yaml  server.js
huangji-jingshi-web/backend/backend/data/celestial/: hashes.json  index.json
huangji-jingshi-web/backend/data/: major_events.json
huangji-jingshi-web/backend/data/celestial/: hashes.json
huangji-jingshi-web/backend/data/celestial/cultures/: huangji-stars.json
huangji-jingshi-web/backend/scripts/: bazi_sxtwl.py
huangji-jingshi-web/backend/src/: main.rs
huangji-jingshi-web/backend/src/bazi/: legacy.rs  mod.rs  models.rs  resolver.rs  sxtwl_bridge.rs
huangji-jingshi-web/backend/tests/: bazi_fixtures.json  bazi_spec.rs  bazi_test.rs
huangji-jingshi-web/huangji_core/: Cargo.toml
huangji-jingshi-web/huangji_core/data/: README.md  year_mapping.json  year_mapping_canonical.json
huangji-jingshi-web/huangji_core/src/: algorithm.rs  data.rs  fortune.rs  huangji_table.rs  lib.rs  lunar.rs  sky.rs  table_engine.rs
huangji-jingshi-web/huangji_core/src/astro/: mod.rs  solar.rs
huangji-jingshi-web/huangji_core/src/calendar/: ganzhi.rs  jieqi.rs  mod.rs  time_rule.rs
huangji-jingshi-web/huangji_core/tests/: property_tests.rs
(+1880 files in other folders)
