[package]
name = "backend"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json", "query", "path"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19"
reqwest = { version = "0.11", features = ["json", "stream"] }
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
