[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["皇极经世团队"]

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
urlencoding = "2.1"
huangji_core = { path = "../huangji_core" }
