[package]
name = "huangji_core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
astro = "2.0.0"
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.18"
chinese-lunisolar-calendar = "0.2.0"
